I fixed an error: When screen size equalled 1440, valorant randomizer not showing message was showing; so I had to make it display: none with @media screen and (min-width: 1440px)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,81 +4,86 @@
   }
 }
 
+@media screen and (min-width: 1440px) {
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+  .ValorantRandomizerScreenNotShowing {
+    display: none;
+  }
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  }
 
-* {
-  box-sizing: content-box;
-}
+  * {
+    box-sizing: content-box;
+  }
 
-.nav {
+  .nav {
 
-  width: auto;
-  padding: 2rem 2rem 4rem 2rem;
+    width: auto;
+    padding: 2rem 2rem 4rem 2rem;
 
-  /*
-  Parent Div's Width = Child Div's Width + Padding + Border + Width
-  1440px = width: auto, so () + (16px + 16px) + 0px + 0px
-  */
+    /*
+    Parent Div's Width = Child Div's Width + Padding + Border + Width
+    1440px = width: auto, so () + (16px + 16px) + 0px + 0px
+    */
 
-  color: rgb(249,249,249);
-  background-color: rgb(51,58,64);
+    color: rgb(249,249,249);
+    background-color: rgb(51,58,64);
 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 
-.nav__logoTitleContainer {
-  display: flex;
-  flex-direction: row;
-}
-.nav__logo {
-  width: 30px;
+  .nav__logoTitleContainer {
+    display: flex;
+    flex-direction: row;
+  }
+  .nav__logo {
+    width: 30px;
 
-  margin-right: 1rem;
-}
+    margin-right: 1rem;
+  }
 
-.nav__title {
-  font-family: "Valorant";
-  font-size: 30px;
-  margin-block: 10px;
+  .nav__title {
+    font-family: "Valorant";
+    font-size: 30px;
+    margin-block: 10px;
 
-  transition-duration: 1.5s;
+    transition-duration: 1.5s;
 
-  cursor: pointer;
-}
+    cursor: pointer;
+  }
 
-.nav__title:hover {
-  color: rgb(235,78,92);
-}
+  .nav__title:hover {
+    color: rgb(235,78,92);
+  }
 
-.nav__motto {
-  font-family: "Couture";
-  margin-top: 0rem;
-  font-size: 10px;
+  .nav__motto {
+    font-family: "Couture";
+    margin-top: 0rem;
+    font-size: 10px;
 
-  margin-left: 3rem;
-}
+    margin-left: 3rem;
+  }
 
-.nav__link {
-  font-family: "Couture";
-  color: white;
-  text-decoration: none;
-  transition-duration: 1.5s;
-}
+  .nav__link {
+    font-family: "Couture";
+    color: white;
+    text-decoration: none;
+    transition-duration: 1.5s;
+  }
 
-.nav__link--marginRight {
-  margin-right: 1.3rem;
-}
+  .nav__link--marginRight {
+    margin-right: 1.3rem;
+  }
 
-.nav__link:hover {
-  color: rgb(235,78,92);
+  .nav__link:hover {
+    color: rgb(235,78,92);
+  }
 }
